test/LitTests/SemanticAnalysis/Module/ExportedFunction.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export a.b.c 1.2.3 {
	// CHECK: .loci:6:2: error: definition required for exported function 'decl'
	void decl();
	
	void def() { }
}

// CHECK: .loci:12:1: error: definition required for exported function 'exportedDecl'
export void exportedDecl();

export void exportedDef() { }

// CHECK: 2 errors generated.
